# llm_time_series_analysis

./: .env.template  .pre-commit-config.yaml  README.md  pyproject.toml
data/: README.md  air_passengers.csv  easy_precise_questions.csv  easy_questions.csv  hard_questions.csv  medium_questions.csv  melbourne_temp.csv  nyc_taxi.csv
notebooks/: data_exporation.ipynb
notebooks/code_gen_assistant_code_interpreter/: code_gen_assistant_code_interpreter.ipynb
notebooks/code_gen_assistant_code_interpreter/prompts/: instruction.jinja2
notebooks/code_gen_pure_prompt/: pure_prompt_code_gen.ipynb
notebooks/code_gen_pure_prompt/prompts/: prompt.jinja2
notebooks/code_generation/: code_generation.ipynb
notebooks/code_generation/prompts/: draw_picture.jinja2  prompt.jinja2
notebooks/direct_querying/: direct_querying.ipynb
notebooks/direct_querying/prompts/: prompt.jinja2
notebooks/func_calling/: func_calling.ipynb
notebooks/func_calling/prompts/: prompt.jinja2
notebooks/func_calling_assistant_customized/: func_calling_assistant_customized.ipynb
notebooks/func_calling_assistant_customized/prompts/: prompt.jinja2
notebooks/function_calling/: code_interpreter.ipynb
notebooks/function_calling/prompt/: code_interpreter_instruction.jinja2
notebooks/llm_with_tooling/: openai_assistant.ipynb
notebooks/llm_with_tooling/prompt/: instruction.jinja2
notebooks/not_code_gen_pure_prompt/: not_code_gen_pure_prompt.ipynb
notebooks/pure_prompt/: prompts.ipynb
notebooks/utils/: assistants.py  customized_func_tools.py  utils.py  vars.py
(+2 files in other folders)
