[project]
name = "llm_time_series_analysis"
requires-python = ">= 3.12"
version = "0.1.0"
dependencies = [
    "openai",
    "pandas",
    "plotly",
    "nbformat",
    "python-dotenv",
    "scikit-learn",
    "matplotlib",
    "darts",
    "tabulate"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit"
]

[tool.ruff]
line-length = 88
indent-width = 4
show-fixes = true

[tool.ruff.lint]
ignore = ["E402", "E722"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.setuptools]
py-modules = []
